# 2d_game

./: .gitignore  CMakeLists.txt  main.cpp
source/: Game.cpp  Game.h  GameMap.cpp  GameMap.h  GameObject.cpp  GameObject.h  TextureManager.cpp  TextureManager.h
source/components/: CollisionComponent.h  DirectionComponent.h  InputComponent.h  PositionComponent.h  SpriteComponent.h  TextureComponent.h
source/systems/: CollisionSystem.h  InputHandler.h  InputSystem.h  MovementSystem.h  RenderSystem.h  SDLEventSystem.h  System.h
source/utils/: Log.h
